--- a/sidebar.htm
+++ b/sidebar.htm
@@ -43,7 +43,7 @@ while (fileExists("content/page"+j+".htm")==1) {
 document.write("<ul style='list-style-type: none;'>")
 j=j-1;
 while (j>0) {
-  document.write("<li><a style='text-decoration:none;' href='https://aquarium.static.domains?type=content&page="+pagearr[j-1]+"' target='_parent'>"+pageheads[j-1]+"</a></li>")
+  document.write("<li><a style='text-decoration:none;' href='https://madrabbit90.github.io/aquarium?type=content&page="+pagearr[j-1]+"' target='_parent'>"+pageheads[j-1]+"</a></li>")
   j=j-1
 }
 document.write("</ul>")
@@ -67,7 +67,7 @@ while (fileExists("blog/test"+i+".htm")==1) {
 document.write("<ul style='list-style-type: none;'>")
 i=i-1;
 while (i>0) {
-  document.write("<li><a style='text-decoration:none;' href='https://aquarium.static.domains?type=blog&page="+arr[i-1]+"' target='_parent'>"+heads[i-1]+"</a></li>")
+  document.write("<li><a style='text-decoration:none;' href='https://madrabbit90.github.io/aquarium?type=blog&page="+arr[i-1]+"' target='_parent'>"+heads[i-1]+"</a></li>")
   i=i-1
 }
 document.write("</ul>")
