--- a/content/page1.htm
+++ b/content/page1.htm
@@ -1,7 +1,7 @@
 <title id="title">Web Pages</title>
 
+<center></center><p><b>Web Pages</b></p><center>
 
-
-    
-    This is where webpages I built for other people will go.
-    
+<p><a href="https://madrabbit90.github.io/aquarium/mockups/racines/"><u>Garden Supply Homepage</u></a></p>
+<p>A mockup I designed to pitch to a garden supply store.</p>
+<img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/racines/thumb.jpg"/>
