--- a/content/page4.htm
+++ b/content/page4.htm
@@ -23,10 +23,10 @@
 
 <p>I think they came out rather well. The links to the compiled roms are below.</p>
 
-<p>Dots and Boxes<br/>
-Lights Out<br/>
-Tic Tac Tiles (Lite 3)<br/>
-Total Eclipse (incomplete mobile port)</p>
+<p><a href="assets/dotsandboxes.gb"><u>Dots and Boxes</u></a><br/>
+<a href="assets/lightsoutdx.gb"><u>Lights Out</u></a><br/>
+<a href="assets/tictactiles.gba"><u>Tic Tac Tiles (Lite 3)</u></a><br/>
+<a href="assets/totaleclipse.gba"><u>Total Eclipse (incomplete port)</u></a></p>
  <center><p><b>Monarch Handheld PC</b></p></center>
     <img class="illust" src="images/monarch.jpg">
 
