--- a/mockups/racines/index.htm
+++ b/mockups/racines/index.htm
@@ -88,7 +88,7 @@ Nisl purus in mollis nunc sed id semper. Pulvinar elementum integer enim neque v
   <br/><br/>
   <center>
     <p class="newstext">Designed by Stephen Marlow<br/>
-    <a href="https://aquarium.static.domains">See My Portfolio</a></p>
+    <a href="https://madrabbit90.github.io/aquarium/">See My Portfolio</a></p>
   </center<br/><br/>
 </div>
 
