--- a/mockups/salon/index.htm
+++ b/mockups/salon/index.htm
@@ -43,6 +43,9 @@ function injectContent(url2) {
 <div class="content" id="content">
   
 </div>
+<div class="contact" id="contact">
+    <iframe src="contact.htm"></iframe>
+</div>
 <div class="bottbar">
     <br/><br/>
   <center>
