--- a/mockups/salon/contact.htm
+++ b/mockups/salon/contact.htm
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="style.css">
 <center>
-<iframe src="https://calendar.google.com/calendar/embed?src=dummystuff25%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe class="google" src="https://calendar.google.com/calendar/embed?src=dummystuff25%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 <form>
   <input type="text" value="First Name"/> 
   <input type="text" value="Last Name"/> 
