--- a/mockups/salon/contact.htm
+++ b/mockups/salon/contact.htm
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="style.css">
+<body class="contactbody">
 <center>
 <iframe class="google" src="https://calendar.google.com/calendar/embed?src=dummystuff25%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 <form>
@@ -9,3 +10,4 @@
   <input type="submit" value="Book Now">
 </form>
 </center>
+</body>
