--- a/mockups/salon/contact.htm
+++ b/mockups/salon/contact.htm
@@ -7,7 +7,7 @@
   <input type="text" value="First Name"/> 
   <input type="text" value="Last Name"/> 
   <input type="text" value="Phone"/> 
-  <input type="text" value="Appointment Day/Time"/><br/><br/>
+  <input type="text" value="Appointment Day/Time"/><br/>
   <input type="submit" value="Book Now">
 </form>
 </center>
