--- a/mockups/salon/index.htm
+++ b/mockups/salon/index.htm
@@ -67,7 +67,7 @@ if (product == null){
 }
 
 document.getElementById('content').
-innerHTML = injectContent("content/"+product+".htm");
+innerHTML = injectContent("content/"+product+".htm")+"<h1 class='apptfoot'>Make an Appointment</h1>";
 
 </script>
 
