--- a/mockups/salon/contact.htm
+++ b/mockups/salon/contact.htm
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="style.css">
 <body class="contactbody">
 <center>
-<iframe class="google" src="https://calendar.google.com/calendar/embed?src=dummystuff25%40gmail.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+<iframe class="google" src="https://calendar.google.com/calendar/embed?height=1200&wkst=1&ctz=America%2FChicago&bgcolor=%23ffffff&showTitle=0&showDate=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&showNav=0&src=ZHVtbXlzdHVmZjI1QGdtYWlsLmNvbQ&src=YWRkcmVzc2Jvb2sjY29udGFjdHNAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&src=ZW4udXNhI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%2333B679&color=%230B8043" style="border-width:0" width="800" height="1200" frameborder="0" scrolling="no"></iframe>
 <br/><br/>
 <form>
   <input type="text" value="First Name"/> 
