--- a/mockups/salon/index.htm
+++ b/mockups/salon/index.htm
@@ -25,16 +25,24 @@ function injectContent(url2) {
 <div class="navbar">
   
   <span class="navbuttons">
+    <a href="index.htm?page=home">
     Home
+    </a>
     <span class="column"></span>
     <span class="row">&nbsp;|&nbsp;</span>
+    <a href="index.htm?page=serviced">
     Services
+    </a>
     <span class="column"></span>
     <span class="row">&nbsp;|&nbsp;</span>
+    <a href="index.htm?page=aboutus">
     About Us
+    </a>
     <span class="column"></span>
     <span class="row">&nbsp;|&nbsp;</span>
+    <a href="index.htm?page=appointment">
     Appointment
+    </a>
   </span>
   
 </div>
