--- a/mockups/salon/index.htm
+++ b/mockups/salon/index.htm
@@ -30,7 +30,7 @@ function injectContent(url2) {
     </a>
     <span class="column"></span>
     <span class="row">&nbsp;|&nbsp;</span>
-    <a href="index.htm?page=serviced">
+    <a href="index.htm?page=services">
     Services
     </a>
     <span class="column"></span>
