--- a/content/page1.htm
+++ b/content/page1.htm
@@ -5,3 +5,10 @@
 <p><a href="https://madrabbit90.github.io/aquarium/mockups/racines/"><u>Garden Supply Homepage</u></a></p>
 <p>A mockup I designed to pitch to a garden supply store.</p>
 <img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/racines/thumb.jpg"/>
+
+<p><a href="https://madrabbit90.github.io/aquarium/mockups/salon/"><u>Hair Salon Website</u></a></p>
+<p>A mockup I designed for local hair salons to keep the codebase small, usage simple and cost down. Google calendar integrations make appointments a breeze without adding complexity and content can be easily dropped in as a static page.</p>
+<img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/salon/thumb1.jpg"/>
+<br/>
+<img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/salon/thumb2.jpg"/>
+
