--- a/sidebar.htm
+++ b/sidebar.htm
@@ -24,7 +24,7 @@ function fileExists(url) {
   
 </script>
 
-<div class="sidemenu" style="background-image: url('theme/sidesplash.jpg');background-size:auto 100%;text-shadow: 5px 5px 9px #000000;">
+<div class="sidemenu" style="background-image: url('theme/sidesplash.jpg');background-size:100% 100%;text-shadow: 5px 5px 9px #000000;">
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p><u>Main Menu</u></p>
