--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@ function injectContent(url2) {
 
 <div class="rightpanel">
 <div class="header">
-    <img class="illust" src="theme/header.jpg">
+    <img class="illust mobhead" src="theme/header.jpg">
+    <img class="illust deskhead" src="theme/deskheader.jpg">
 
     
     
