--- a/content/page1.htm
+++ b/content/page1.htm
@@ -13,7 +13,7 @@
 <img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/salon/thumb2.jpg"/>
 <p><a href="https://madrabbit90.github.io/aquarium/mockups/rental/"><u>Video Rental Store Website</u></a></p>
 <p>A work-in-progress mock-up. I grew up with local video rental stores as well as Blockbuster Video, so this one was fun to reimagine.</p>
-<img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/rental/thumb1.jpg"/>
+<img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/rental/thumb1.png"/>
 <br/><br/>
-<img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/rental/thumb2.jpg"/>
+<img class="illust" src="https://madrabbit90.github.io/aquarium/mockups/rental/thumb2.png"/>
 
