--- a/content/page4.htm
+++ b/content/page4.htm
@@ -1,3 +1,10 @@
 <title id="title">Shop</title>
 
 <p>Shop goes here!</p>
+
+<div style="text-align:center;line-height:150%;width:100%">
+<a href="https://www.zazzle.com/treasure_hunter_t_shirt-256117237068780110" rel="nofollow"><img src="https://rlv.zcache.com/treasure_hunter_t_shirt-rdac56452b9404a758d4c767c0e91b1c1_k2gml_1024.jpg?max_dim=325" alt="Treasure Hunter" style="border:0;" /></a>
+<br/>
+<a href="https://www.zazzle.com/treasure_hunter_t_shirt-256117237068780110" rel="nofollow">Treasure Hunter</a>
+<br/>by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a>
+</div>
