--- a/content/page4.htm
+++ b/content/page4.htm
@@ -1,6 +1,11 @@
 <title id="title">Gift Shop</title>
 
-<p>Shop goes here!</p>
+<center>
+<p><b>Gift Shop</b></p>
+
+<p>"Hello! You found my shop of strange and wonderful things!"</p>
+
+<p>But seriously. If you like what you see, consider buying something. Custom designed. Great for birthdays and holidays!</p>
 
 <div style="text-align:center;line-height:150%;width:48%;display:inline-block;">
 <a href="https://www.zazzle.com/treasure_hunter_t_shirt-256595114843801579" rel="nofollow"><img src="https://rlv.zcache.com/treasure_hunter_t_shirt-r80810d8f440147a3a6844b7965a46988_k2gml_1024.jpg?max_dim=325" alt="Treasure Hunter" style="border:0;" /></a>
@@ -15,3 +20,5 @@
 <a href="https://www.zazzle.com/treasure_hunter_t_shirt-256076727465199849" rel="nofollow">Treasure Hunter</a>
 <br/>by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a>
 </div>
+
+</center>
