--- a/content/page4.htm
+++ b/content/page4.htm
@@ -21,4 +21,6 @@
 <br/>by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a>
 </div>
 
+ <div style="text-align:center;line-height:150%;width:48%;display:inline-block;"> <a href="https://www.zazzle.com/checkmate_mug-256437027328227711" rel="nofollow" > <img src="https://rlv.zcache.com/checkmate_mug-r0331e923e3244d65947bf79218fe72aa_kfpvn_325.jpg?rlvnet=1&bg=0xffffff" alt="Checkmate! Mug" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/checkmate_mug-256437027328227711" rel="nofollow" >Checkmate! Mug</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
+
 </center>
