--- a/content/page4.htm
+++ b/content/page4.htm
@@ -7,26 +7,26 @@
 
 <p>But seriously. If you like what you see, consider buying something. Custom designed. Great for birthdays and holidays!</p>
 
-<div style="text-align:center;line-height:150%;width:48%;display:inline-block;">
+<div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;">
 <a href="https://www.zazzle.com/treasure_hunter_t_shirt-256595114843801579" rel="nofollow"><img src="https://rlv.zcache.com/treasure_hunter_t_shirt-r80810d8f440147a3a6844b7965a46988_k2gml_1024.jpg?max_dim=325" alt="Treasure Hunter" style="border:0;" /></a>
 <br/>
 <a href="https://www.zazzle.com/treasure_hunter_t_shirt-256595114843801579" rel="nofollow">Treasure Hunter</a>
 <br/>by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a>
 </div>
 
-<div style="text-align:center;line-height:150%;width:48%;display:inline-block;">
+<div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;">
 <a href="https://www.zazzle.com/treasure_hunter_t_shirt-256076727465199849" rel="nofollow"><img src="https://rlv.zcache.com/treasure_hunter_t_shirt-rbd7dda1c3b044febbd1d32af284b105f_jyr6t_1024.jpg?max_dim=325" alt="Treasure Hunter" style="border:0;" /></a>
 <br/>
 <a href="https://www.zazzle.com/treasure_hunter_t_shirt-256076727465199849" rel="nofollow">Treasure Hunter</a>
 <br/>by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a>
 </div>
 
- <div style="text-align:center;line-height:150%;width:48%;display:inline-block;"> <a href="https://www.zazzle.com/checkmate_mug-256437027328227711" rel="nofollow" > <img src="https://rlv.zcache.com/checkmate_mug-r0331e923e3244d65947bf79218fe72aa_kfpvn_325.jpg?rlvnet=1&bg=0xffffff" alt="Checkmate! Mug" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/checkmate_mug-256437027328227711" rel="nofollow" >Checkmate! Mug</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
+ <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/checkmate_mug-256437027328227711" rel="nofollow" > <img src="https://rlv.zcache.com/checkmate_mug-r0331e923e3244d65947bf79218fe72aa_kfpvn_325.jpg?rlvnet=1&bg=0xffffff" alt="Checkmate! Mug" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/checkmate_mug-256437027328227711" rel="nofollow" >Checkmate! Mug</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
- <div style="text-align:center;line-height:150%;width:48%;display:inline-block;"> <a href="https://www.zazzle.com/when_pigs_fly_wallart_metal_print-256189149139317132" rel="nofollow" > <img src="https://rlv.zcache.com/when_pigs_fly_wallart_metal_print-ra45fec00857c4d6cbb6511a93c3c3b1f_ka2lh_325.jpg?rlvnet=1&bg=0xffffff" alt="When Pigs Fly WallArt Metal Print" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/when_pigs_fly_wallart_metal_print-256189149139317132" rel="nofollow" >When Pigs Fly WallArt Metal Print</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
+ <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/when_pigs_fly_wallart_metal_print-256189149139317132" rel="nofollow" > <img src="https://rlv.zcache.com/when_pigs_fly_wallart_metal_print-ra45fec00857c4d6cbb6511a93c3c3b1f_ka2lh_325.jpg?rlvnet=1&bg=0xffffff" alt="When Pigs Fly WallArt Metal Print" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/when_pigs_fly_wallart_metal_print-256189149139317132" rel="nofollow" >When Pigs Fly WallArt Metal Print</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
- <div style="text-align:center;line-height:150%;width:48%;display:inline-block;"> <a href="https://www.zazzle.com/dapper_whale_travel_mug-256238269397962844" rel="nofollow" > <img src="https://rlv.zcache.com/dapper_whale_travel_mug-re58587f5b4e64d71835154a380685980_x7jgm_8byvr_325.jpg?bg=0xffffff" alt="Dapper Whale Travel Mug" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/dapper_whale_travel_mug-256238269397962844" rel="nofollow" >Dapper Whale Travel Mug</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
+ <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/dapper_whale_travel_mug-256238269397962844" rel="nofollow" > <img src="https://rlv.zcache.com/dapper_whale_travel_mug-re58587f5b4e64d71835154a380685980_x7jgm_8byvr_325.jpg?bg=0xffffff" alt="Dapper Whale Travel Mug" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/dapper_whale_travel_mug-256238269397962844" rel="nofollow" >Dapper Whale Travel Mug</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
- <div style="text-align:center;line-height:150%;width:48%;display:inline-block;"> <a href="https://www.zazzle.com/whaley_dapper_metal_print-256553843967474393" rel="nofollow" > <img src="https://rlv.zcache.com/whaley_dapper_metal_print-rbd849355bb0849e6a2bb06c4805c674d_k2cwz_325.jpg?rlvnet=1&bg=0xffffff" alt="Whaley Dapper Metal Print" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/whaley_dapper_metal_print-256553843967474393" rel="nofollow" >Whaley Dapper Metal Print</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
+ <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/whaley_dapper_metal_print-256553843967474393" rel="nofollow" > <img src="https://rlv.zcache.com/whaley_dapper_metal_print-rbd849355bb0849e6a2bb06c4805c674d_k2cwz_325.jpg?rlvnet=1&bg=0xffffff" alt="Whaley Dapper Metal Print" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/whaley_dapper_metal_print-256553843967474393" rel="nofollow" >Whaley Dapper Metal Print</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
 </center>
