--- a/content/page4.htm
+++ b/content/page4.htm
@@ -37,4 +37,6 @@
 
  <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/homesick_planner-256698834692461909" rel="nofollow" > <img src="https://rlv.zcache.com/homesick_planner-rd9e461ce6ebb48ef9430818badae1cfb_e38k9_325.jpg?rlvnet=1&bg=0xffffff" alt="Homesick Planner" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/homesick_planner-256698834692461909" rel="nofollow" >Homesick Planner</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
+ <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/cheerup_planner-256189069454602163" rel="nofollow" > <img src="https://rlv.zcache.com/cheerup_planner-r7cd7389849724fad9f5e0828872d609c_e38k9_325.jpg?rlvnet=1&bg=0xffffff" alt="Cheerup! Planner" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/cheerup_planner-256189069454602163" rel="nofollow" >Cheerup! Planner</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
+
 </center>
