--- a/content/page4.htm
+++ b/content/page4.htm
@@ -39,4 +39,6 @@
 
  <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/cheerup_planner-256189069454602163" rel="nofollow" > <img src="https://rlv.zcache.com/cheerup_planner-r7cd7389849724fad9f5e0828872d609c_e38k9_325.jpg?rlvnet=1&bg=0xffffff" alt="Cheerup! Planner" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/cheerup_planner-256189069454602163" rel="nofollow" >Cheerup! Planner</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
+ <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/goin_gaucho_planner-256949312980372277" rel="nofollow" > <img src="https://rlv.zcache.com/goin_gaucho_planner-ra585e1fa4a404a05ace4820f12bff134_e38ek_325.jpg?rlvnet=1&bg=0xffffff" alt="Goin&#39; Gaucho Planner" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/goin_gaucho_planner-256949312980372277" rel="nofollow" >Goin&#39; Gaucho Planner</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
+
 </center>
