--- a/content/page4.htm
+++ b/content/page4.htm
@@ -9,19 +9,7 @@
 
  <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/fish_tank-256465537269174257" rel="nofollow" > <img src="https://rlv.zcache.com/fish_tank-r0d872fd62a604a0c87961e3da578eed2_k21al_325.jpg?bg=0xffffff" alt="Fish Tank" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/fish_tank-256465537269174257" rel="nofollow" >Fish Tank</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
-<div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;">
-<a href="https://www.zazzle.com/treasure_hunter_t_shirt-256595114843801579" rel="nofollow"><img src="https://rlv.zcache.com/treasure_hunter_t_shirt-r80810d8f440147a3a6844b7965a46988_k2gml_1024.jpg?max_dim=325" alt="Treasure Hunter" style="border:0;" /></a>
-<br/>
-<a href="https://www.zazzle.com/treasure_hunter_t_shirt-256595114843801579" rel="nofollow">Treasure Hunter</a>
-<br/>by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a>
-</div>
-
-<div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;">
-<a href="https://www.zazzle.com/treasure_hunter_t_shirt-256076727465199849" rel="nofollow"><img src="https://rlv.zcache.com/treasure_hunter_t_shirt-rbd7dda1c3b044febbd1d32af284b105f_jyr6t_1024.jpg?max_dim=325" alt="Treasure Hunter" style="border:0;" /></a>
-<br/>
-<a href="https://www.zazzle.com/treasure_hunter_t_shirt-256076727465199849" rel="nofollow">Treasure Hunter</a>
-<br/>by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a>
-</div>
+ <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/pirates_life_t_shirt-256531111407195413" rel="nofollow" > <img src="https://rlv.zcache.com/pirates_life_t_shirt-rcd8b7542a982499b9ca9dd8ab980180d_b8jod_325.jpg?bg=0xffffff" alt="Pirate&#39;s Life T-Shirt" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/pirates_life_t_shirt-256531111407195413" rel="nofollow" >Pirate&#39;s Life T-Shirt</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
  <div class="shopitem" style="text-align:center;line-height:150%;display:inline-block;"> <a href="https://www.zazzle.com/checkmate_mug-256126504149741943" rel="nofollow" > <img src="https://rlv.zcache.com/checkmate_mug-rbd26d1c3ffb540cbb0a52f7842060dff_kfpx7_325.jpg?rlvnet=1&bg=0xffffff" alt="Checkmate Mug" style="border:0;" /> </a> <br /> <a href="https://www.zazzle.com/checkmate_mug-256126504149741943" rel="nofollow" >Checkmate Mug</a> <br />by <a href="https://www.zazzle.com/store/fish_tank_designs" rel="nofollow">Fish_Tank_Designs</a> </div>
 
