--- a/index.html
+++ b/index.html
@@ -72,8 +72,10 @@ if (type == null){
     type = "content"
 }
 
+var sharer = "<p>Share: <a href='https://madrabbit90.github.io/aquarium/"+type+"/"+product+".htm'>facebook</a></p>";
+
 document.getElementById('content').
-innerHTML = "<div style='width:90%;padding:3%;' >"+injectContent(type+"/"+product+".htm")+"</div>"+injectContent("footer.htm");
+innerHTML = "<div style='width:90%;padding:3%;' >"+sharer+injectContent(type+"/"+product+".htm")+"</div>"+injectContent("footer.htm");
 
 </script>
 
